--- a/src/App.css
+++ b/src/App.css
@@ -14,16 +14,19 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #F5F5F7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
-
+.app-card {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+}
 .App-link {
   color: #61dafb;
 }
